# rocketworkbench

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
apps/: README.md
apps/analyser/: CMakeLists.txt  README.md  analyser.c
apps/analyser/include/analyser/: analyser.h
apps/analyser/src/: analyser.c  logic.c
apps/cpropep/: CMakeLists.txt  cpropep.c
apps/cpropep-2/: rocket.c
apps/cpropep-gpcp/: cpropep.c
apps/cpropep-web/: cgitest.c  cpropep-web.c
apps/cpropep/src/: cpropep-web.c  cpropep.c
apps/gba/: .ccmalloc  CMakeLists.txt  README.md  gba.c  grain.c  grain.h  output.c  output.h  shape.c  shape.h
apps/gba/src/: gba.c  grain.c  output.c  shape.c
apps/grainanalysis/: CMakeLists.txt
apps/grainanalysis/src/: drawstar.c
apps/lrd/: CMakeLists.txt  README.md  lrd.c  lrd.h  lrd_load.c  lrd_load.h  main.c
apps/lrd-web/: lrdcgi.c
apps/lrd/src/: load.c  lrd.c  lrdcgi.c  main.c
apps/mcp/: CMakeLists.txt  README.md  mcp.c  mcp.h  modele.c  test.c
apps/mcp/src/: mcp.c  modele.c  test.c
apps/profiler/: CMakeLists.txt  parser.c  profiler.c
apps/profiler/include/profiler/: profiler.h
apps/profiler/src/: parser.c  profiler.c
apps/prop/: CMakeLists.txt  plot.c  prop.c
apps/prop/src/: plot.c  prop.c
apps/rocket/: CMakeLists.txt  rocket.c
apps/rocket/src/: rocket.c
apps/rockflight/: CMakeLists.txt  aero.c  aero.h  atmos.c  atmos.h  check.c  engine.c  engine.h  eom.c  parser.c  print.c  rocflight.h  rockflight.c  simulate.c  state.h
apps/rockflight/deprecated/: rocflight.c
apps/rockflight/doc/: rockflight.md
apps/rockflight/gui/: viewer.c
apps/rockflight/include/rockflight/: aero.h  atmos.h  engine.h  mass.h  rocket.h  rockflight.h  stage.h  state.h
apps/rockflight/src/: aero.c  atmos.c  check.c  engine.c  eom.c  evaluate_function.c  mass.c  parser.c  print.c  rocket.c  rockflight.c  simulate.c  stage.c  viewer.c
apps/rockflight/test/: density.m
apps/simulator/: CMakeLists.txt
apps/simulator/include/simulator/: lsode.h  rk4.h
apps/simulator/src/: c++rocket.cc  lsode.cc  modeles.cc  motor.l  rk4.cc  rocket.cc  simulation.cc
docs/: README.md  RECOVERY.md
docs/apps/: README.md
docs/apps/cpropep/examples/: input_alt.pro
docs/apps/grainanalysis/: README.md
docs/apps/rocket/: README.md
docs/apps/rockflight/fortran/: hwm87dist_test.f
docs/apps/simulator/: README.md
docs/data/: references.txt
docs/lib/: README.md
docs/lib/cpropep/: README.md  thermo.md
docs/lib/gpcp/: README.md
docs/lib/mcp/: README.md
docs/lib/thermo/: README.md
docs/profiler/: README.md
docs/prop/: README.md
docs/rockflight/: README.md  rockflight.md
lib/compat/: CMakeLists.txt  README.md  compat.c
lib/compat/include/: compat.h  getopt.h
lib/compat/src/: strsep.c
lib/convert/: CMakeLists.txt  README.md
lib/convert/src/: test.c
lib/cpropep/: CMakeLists.txt  README.md  derivative.c  derivative.h  equilibrium.c  equilibrium.h  performance.c  return.h
lib/cpropep/include/cpropep/: derivative.h  equilibrium.h  performance.h  print.h  type.h
lib/cpropep/include/thermo/: thermo.h
lib/cpropep/src/: derivative.c  equilibrium.c  load.c  performance.c  print.c  thermo.c
lib/gpcp/: CMakeLists.txt  README.md  gpcp.c  gpcp.h  test.c
lib/gpcp/src/: gpcp.c
lib/gpcp/tests/: test.c  test.conf
lib/lrd/: README.md  lrd.c
lib/mcp/: mcp.h
lib/num/: CMakeLists.txt  README.md  lu.c  ptfix.c  rkf.c  test_num.c
lib/num/src/: general.c  lu.c  newton.c  print.c  ptfix.c  rk4.c  rkf.c  sec.c  simpson.c  spline.c  sysnewton.c  test.c  trapeze.c
lib/rockflight/: README.md  aero.c  aero.h  engine.c  engine.h  eom.c  evaluate_function.c  mass.c  rocket.c  state.h
lib/rockflight/fortran/: hwm87dist.f  hwm93dist.f
lib/simulation/: README.md  rocket.cc  simulation.cc
lib/simulation/simulator/: .ccmalloc
lib/thermo/: load.h
libs/libcompat/: CMakeLists.txt  getopt.c
libs/libcompat/include/: compat.h
libs/libconvert/: CMakeLists.txt  convert.c  test.c
libs/libconvert/include/: convert.h
libs/libcpropep/: CMakeLists.txt  derivative.c  performance.c  print.c
libs/libcpropep/include/: const.h  conversion.h  equilibrium.h  performance.h  print.h  return.h  type.h
libs/liblrd/: CMakeLists.txt
libs/liblrd/include/: lrd.h
libs/libmcp/: CMakeLists.txt  mcp.c
libs/libnum/: CMakeLists.txt  general.c  lu.c  newton.c  print.c  rk4.c  sec.c  spline.c  sysnewton.c  test.c
libs/libnum/include/: num.h
libs/librockflight/: CMakeLists.txt  aero.h  atmos.c  atmos.h  eom.c  evaluate_function.c  mass.h  rocket.h  stage.c  stage.h
libs/librockflight/fortran/: hwm87dist.txt  hwm90dist.f  hwm90dist.txt  hwm93dist.txt
libs/librockflight/include/: rockflight.h
libs/libsimulation/: CMakeLists.txt  c++rocket.h  lsode.cc  lsode.h  modeles.cc  rk4.cc  rk4.h  rocket.cc  rocket.h  simulation.cc  simulation.h
libs/libsimulation/simulator/: c++rocket.cc
libs/libthermo/: CMakeLists.txt  load.c  thermo.c
libs/libthermo/include/: thermo.h
source/executables/cpropep/src/: Makefile.win  cpropep.conf
source/executables/prop/: Makefile.win
source/libraries/libcompat/: Makefile.win
source/libraries/libcompat/include/: compat.h
source/libraries/libcpropep/: Makefile.win
source/libraries/libcpropep/src/: equilibrium.c
source/libraries/libnum/: Makefile.win
source/libraries/libnum/src/: rkf.c  test.c
source/libraries/libthermo/: Makefile.win
source/libraries/libthermo/src/: load.c
tests/libnum/src/: test.c
